--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 #navbar {
   display:flex;
   justify-content: space-evenly;
+  padding: 10px;
+  border-radius: 20px;
 }
 navbar a {
   text-decoration: none;
